--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-v0-project",
-  "version": "0.1.0",
+  "name": "bhagawoti-lama-portfolio",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "build": "next build",
@@ -47,7 +47,7 @@
     "framer-motion": "latest",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "15.3.4",
     "next-themes": "latest",
     "react": "^19",
     "react-day-picker": "latest",
@@ -65,6 +65,8 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "canvas": "^3.1.1",
+    "jimp": "^1.6.0",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
