--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "framer-motion": "latest",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
-    "next": "15.3.4",
+    "next": "15.4.10",
     "next-themes": "latest",
     "react": "^19",
     "react-day-picker": "latest",
@@ -65,10 +65,16 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "canvas": "^3.1.1",
+    "canvas": "^3.2.0",
     "jimp": "^1.6.0",
     "postcss": "^8.5",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "overrides": {
+      "tar-fs": "^2.1.4",
+      "glob": "^10.5.0"
+    }
   }
 }
